--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <canvas id="radar" width="400" height="400"></canvas>
   <div id="console"></div>
   <button onclick="introspect()">Run Introspection Cycle</button>
+  <div id="kairosoul"></div>
   <script src="script.js"></script>
+  <script src="kairosoul.js"></script>
 </body>
 </html>
